@@ -78,6 +78,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapd-ldap chaining with ppolicy (ITS#6540)
 	Fixed slapd-ldap with SASL/EXTERNAL (ITS#6642)
 	Fixed slapd-ldap crasher on matchedDN (ITS#6793)
+	Fixed slapd-ldap with unknown objectClasses (ITS#6814)
 	Fixed slapd-ldif error strings (ITS#6731)
 	Fixed slapd-ndb to honor rootpw setting (ITS#6661)
 	Fixed slapd-ndb hasSubordinates generation (ITS#6712)
